kubernetes/frontend-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qr-frontend
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: qr-frontend
