kubernetes/frontend-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qr-app-and-monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  rules:
    - host: dev.qr-app.devfun.me
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: qr-frontend
              port:
                number: 3000
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: qr-api
              port:
                number: 8000
        - path: /prometheus
          pathType: Prefix
          backend:
            service:
              name: prometheus-stack-kube-prom-prometheus
              port:
                number: 9090
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: prometheus-stack-grafana
              port:
                number: 80
  tls:
    - hosts:
        - "dev.qr-app.devfun.me"
      secretName: qr-app-tls
